scss connectie met css en primary color

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,8 @@
 @import 'form';
 @import 'header';
 @import 'footer';
-@import 'animations';
+@import 'nav';
+// @import 'animations';
 
 // Pages
-@import 'restaurants';
+// @import 'restaurants';
