--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,5 +1,5 @@
 <header>
-    <ul>
+    <ul id="navbar">
         <li>
             <a href="/"><img src="/public/images/icons/home.svg" alt="Home icon"></a>
         </li>
