--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,8 +6,9 @@
 @import 'global';
 @import 'form';
 @import 'header';
+@import 'nav';
 @import 'footer';
-@import 'animations';
+// @import 'animations';
 
 // Pages
-@import 'restaurants';
+// @import 'restaurants';
