--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,11 +2,11 @@
 <html lang="en">
 {{> head }}
 <body>
-    {{> nav }}
+    {{> header }}
     <main>
         {{{body}}}
     </main>
-    {{!-- {{> footer }} --}}
+    {{> nav }}
     <script src="/public/js/app.js"></script>
 </body>
 </html>
