--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -4,3 +4,11 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background: rgb(235,242,255);
+    background: linear-gradient(4deg, rgba(235,242,255,1) 0%, rgba(255,255,255,1) 100%);
+    background-repeat: no-repeat;
+    height: 100vh;
+    font-family: $main-font;
+}
+
