--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,7 +8,8 @@
 @import 'header';
 @import 'nav';
 @import 'footer';
-// @import 'animations';
+@import 'animations';
 
 // Pages
 // @import 'restaurants';
+@import 'messages'
