--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -11,4 +11,16 @@ body{
     height: 100vh;
     font-family: $main-font;
 }
+#chat-container{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 150px;
+    display: grid;
+    align-content: center;
 
+    form{
+        display: flex;
+        justify-content: center;
+    }
+}
