login feature might work
Have to check when you can add an account

--- a/views/auth/welkom.hbs
+++ b/views/auth/welkom.hbs
@@ -9,9 +9,10 @@
             <p>Explore awesome restaurants based on your favorite food.</p>
         </article>
 
-        <button>Login</button>
+        <a href="/login" id="button">Login</a>
+        <a href="/register" id="button">Sign up</a>
 
-        <button>Sign up</button>
+        
         <a href="#"><p>Continue without signing up</p></a>
     </section>
 </main>
