--- a/resources/sass/_form.scss
+++ b/resources/sass/_form.scss
@@ -70,7 +70,7 @@
             margin-left:1.3em;  
         }
     }
-    button{
+    #button{
         border:none;
         padding:.6em;
         width:calc(100% - 20%);
@@ -79,11 +79,11 @@
         margin-top:.5em;
         font-family:"poppins",sans-serif;
     }
-    button:nth-of-type(1){
+    #button:nth-of-type(1){
         background-color:black;
         color:white;
     }
-    button:nth-of-type(2){
+    #button:nth-of-type(2){
         background-color:grey;
         margin-bottom:.4em;
     }    
