--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -8,7 +8,7 @@
             <p>Welcome back, let's get you started.</p>
         </article>
 
-        <form>
+        <form action="/inloggen" id="homescreen" method="POST">
             <label for="frame">Username</label>
             <input type="text" id="username" name="username" placeholder="Username">
 
