created all chats page

--- a/views/messages/index.hbs
+++ b/views/messages/index.hbs
@@ -1,12 +1,29 @@
-<h1>Messages</h1>
+<h1>Chats</h1>
 
-<section>
+<section id="my-chats">
     <ul>
-        <li>
-            <a href="/messages/user/chat">
-                chat with User
-            </a>
-        </li>
+        {{#each users}}
+            <li>
+                {{#compare receiver.username 'ymaroblue'}}
+                    <a href="/messages/{{ ../inviter.username }}/chat">
+                        <img src="{{ ../inviter.img}}" alt="" srcset="">
+                        <section>
+                            <p>{{ ../inviter.name }}</p>
+                {{else}}
+                    <a href="/messages/{{ ../receiver.username }}/chat">
+                        <img src="{{ ../receiver.img}}" alt="" srcset="">
+                        <section>
+                            <p>{{ ../receiver.name }}</p>
+                {{/compare}}
+                {{#each history}}
+                    {{#if @last}}
+                        <span>{{ message }}</span>
+                    {{/if}}                
+                {{/each}}
+                    </section>
+                </a>
+            </li>
+        {{/each}}
     </ul>
 </section>
 
