--- a/views/messages/chat.hbs
+++ b/views/messages/chat.hbs
@@ -1,7 +1,29 @@
-<h1>Chat</h1>
-
+<section id="chat-info">
+    <a href="/messages">
+        <img src="/public/images/arrow-left.svg" alt="Back image"> back
+    </a>
+    <h1>{{ chat.receiver.name }}</h1>
+    {{#unless accepted}}
+        <span>This chat has not been accepted yet</span>
+    {{/unless}}
+</section>
 <section id="message-container">
-    <ul></ul>
+    <ul>
+        {{#each chat.history}}
+            
+            <li 
+            {{#compare user.username 'ymaroblue'}}
+                class="sender"
+            {{else}}
+                class="receiver"
+            {{/compare}}
+            >
+                <p>{{ message }}</p>
+                <span>{{date date "h:mm"}}</span>
+
+            </li>
+        {{/each}}
+    </ul>
 </section>
 <section id="chat-container">
     <form>
