--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,6 +7,7 @@
         {{{body}}}
     </main>
     {{> nav }}
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="http://localhost:8080/socket.io/socket.io.js"></script>
     <script src="/public/js/chat.js"></script>
 </body>
