--- a/resources/sass/_messages.scss
+++ b/resources/sass/_messages.scss
@@ -1,6 +1,85 @@
-#message-container{
-    height: 400px;
+#my-chats {
     padding: 20px;
+
+    ul{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        list-style: none;
+
+        li{
+            display: flex;
+            background-color: white;
+            gap: 20px;
+            border-radius: 10px;
+            box-shadow: 1px 1px 10px #0000002a;
+            
+            
+            a{
+                display: flex;
+                align-items: center;
+                gap: 20px;
+                width: 100%;
+                height: 100%;
+                padding: 20px;
+                text-decoration: none;
+
+                img{
+                    width: 30%;
+                    height: 100%;
+                    border-radius: 50%;
+                }
+                
+                section{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content:center;
+                    padding: 10px;
+
+                    p{
+                        font-weight: bold;
+                        color: black;
+                    }
+                    
+                    span{
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
+                        -webkit-box-orient: vertical;  
+                        overflow: hidden;
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+    }
+}
+
+#chat-info {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 5px 20px;
+
+    a{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        text-decoration: none;
+        color: black;
+    }
+
+    img {
+        filter: brightness(0) saturate(100%) invert(0%) sepia(96%) saturate(0%) hue-rotate(91deg) brightness(95%) contrast(105%);
+    }
+
+    h1{
+        margin: 0;
+    }
+}
+
+#message-container{
+    height: 340px;
+    padding: 5px 20px;
 
     ul{
         display: flex;
@@ -9,22 +88,38 @@
         gap: 5px;
         height: 100%;
         overflow-y: auto;
+        overflow-x: hidden;
 
         li {
-            padding: 5px 10px;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            min-width: 30%;
             max-width: 75%;
+            padding: 5px 10px;
             border-radius: 10px;
+            
+            span {
+                align-self: end;
+                font-size: 12px;
+            }
 
             &.sender {
                 align-self: flex-end;
                 background-color: lightgreen;
-                animation: msg-sent .5s forwards;
+
+                &.new {
+                    animation: msg-sent .5s forwards;
+                }
             }
             
             &.receiver {
                 align-self: flex-start;
                 background-color: lightblue;
-                animation: msg-received .5s forwards;
+                
+                &.new {
+                    animation: msg-received .5s forwards;
+                }
             }
         }
     }
