updated login form routes

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -8,7 +8,7 @@
             <p>Welcome back, let's get you started.</p>
         </article>
 
-        <form action="/inloggen" id="homescreen" method="POST">
+        <form action="/login" id="homescreen" method="POST">
             <label for="frame">Username</label>
             <input type="text" id="username" name="username" placeholder="Username">
 
@@ -17,6 +17,6 @@
             <p>Forgot password?</p>
             <input id="button" type="submit" value="Inloggen">
         </form>
-        <p>Not a member?<a href="#">register now!</a></p>
+        <p>Not a member?<a href="/register">register now!</a></p>
     </section>
 </main>
