added new chat route

--- a/views/restaurant/show.hbs
+++ b/views/restaurant/show.hbs
@@ -55,7 +55,7 @@
         <ul class="snap">
             {{#each users}}
                 <li>
-                    <a href="#">
+                    <a href="/messages/{{ username}}/new">
                         <img src="{{ img }}" alt="User Image {{add @index 1 }}">
                         <p>{{ name }}</p>
                     </a>
