--- a/views/messages/index.hbs
+++ b/views/messages/index.hbs
@@ -4,7 +4,8 @@
     <ul>
         {{#each users}}
             <li>
-                {{#compare receiver.username 'ymaroblue'}}
+                
+                {{#compare receiver.username ../authUser.username}}
                     <a href="/messages/{{ ../inviter.username }}/chat">
                         <img src="{{ ../inviter.img}}" alt="" srcset="">
                         <section>
@@ -18,7 +19,10 @@
                 {{#each history}}
                     {{#if @last}}
                         <span>{{ message }}</span>
-                    {{/if}}                
+                    {{/if}}     
+
+                {{else}}
+                <span>Send a message!</span>           
                 {{/each}}
                     </section>
                 </a>
