Nodemail werkt misschien en de nav is nu fixed.

--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -3,7 +3,7 @@
     margin: 2em;
     margin-left: 1em;
     bottom: 0;
-    position: absolute;
+    position: fixed;
     width: calc(100% - 10%);
     border-radius: 2em;
     display: flex;
