--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,12 @@
 @import 'nav';
 @import 'footer';
 @import 'animations';
+@import 'account';
+
 
 // Pages
 // @import 'restaurants';
-@import 'messages'
+@import 'messages';
+@import 'register';
+// @import 'error';
+@import 'home';
