fixed preference buttons
fixed the  preference buttons on the register page

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,6 +7,25 @@ $primary-color: #FFED74;
 $white-color: #ffffff;
 
 $main-font: "poppins", sans-serif;
+
+
+// register page variables
+
+$mainteam-color: #FFED74;
+$mainteam-color-hover: #a39956;
+
+$font-color: #333334;
+$main-font: 'Poppins', sans-serif;
+$input-border-color: #B8C0D7;
+$input-bg-color: #F4F6FC;
+$black-color: black;
+$validate-color:#63d64c;
+$errorpage-bg: #2C3338;
+$white: white;
+$btn-primary-hover: #2d328f;
+$link-color: #6168F3;
+$warning-color: #8b0000;
+
 /* 
   Einde Custom Properties
 */
