--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -38,23 +38,23 @@
             <h2>Preferences</h2>
             <ul class="preferences">
                 <li>
-                    <input type="radio" id="all" name="foodpreferences" />
+                    <input type="checkbox" id="allfood" name="foodpreferences" />
                     <label for="allfood">All</label>
                 </li>
                 <li>
-                    <input type="radio" id="italianfood" name="foodpreferences" />
+                    <input type="checkbox" id="italianfood" name="foodpreferences" />
                     <label for="italianfood">Italian</label>
                 </li>
                 <li>
-                    <input type="radio" id="mexicanfood" name="foodpreferences" />
+                    <input type="checkbox" id="mexicanfood" name="foodpreferences" />
                     <label for="mexicanfood">Mexican</label>
                 </li>
                 <li>
-                    <input type="radio" id="fastfood" name="foodpreferences" />
+                    <input type="checkbox" id="fastfood" name="foodpreferences" />
                     <label for="fastfood">Fastfood</label>
                 </li>
                 <li>
-                    <input type="radio" id="frenchfood" name="foodpreferences" />
+                    <input type="checkbox" id="frenchfood" name="foodpreferences" />
                     <label for="frenchfood">French</label>
                 </li>
             </ul>
