added preference category
added preference category

--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -57,6 +57,11 @@
                     <input type="checkbox" id="frenchfood" name="foodpreferences" />
                     <label for="frenchfood">French</label>
                 </li>
+
+                <li>
+                    <input type="checkbox" id="asianfood" name="foodpreferences" />
+                    <label for="asianfood">Asian</label>
+                </li>
             </ul>
 
             <fieldset>
