--- a/views/messages/chat.hbs
+++ b/views/messages/chat.hbs
@@ -1,11 +1,36 @@
-<h1>Chat</h1>
-
+<section id="chat-info">
+    <a href="/messages">
+        <img src="/public/images/arrow-left.svg" alt="Back image"> back
+    </a>
+    {{#compare chat.receiver.username authUser.username}}
+        <h1>{{ ../chat.inviter.name }}</h1>
+    {{else}}
+        <h1>{{ ../chat.receiver.name }}</h1>
+    {{/compare}}
+    {{#unless accepted}}
+        <span>This chat has not been accepted yet</span>
+    {{/unless}}
+</section>
 <section id="message-container">
-    <ul></ul>
+    <ul>
+        {{#each chat.history}}
+            <li 
+            {{#compare user.username ../authUser.username}}
+                class="sender"
+            {{else}}
+                class="receiver"
+            {{/compare}}
+            >
+                <p>{{ message }}</p>
+                <span>{{date date "h:mm"}}</span>
+            </li>
+        {{/each}}
+    </ul>
 </section>
 <section id="chat-container">
     <form>
         <input type="text" name="message" id="message">
+            <input type="hidden" name="chatName" id="chatName" value="{{ chat.name }}">
         <button type="submit">Send message</button>
     </form>
 </section>
