--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -27,5 +27,10 @@ $link-color: #6168F3;
 $warning-color: #8b0000;
 
 /* 
+likes & home
+*/
+$shadow-color: rgba(33, 0, 165, 0.2);
+
+/* 
   Einde Custom Properties
 */
