--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -25,6 +25,7 @@ $white: white;
 $btn-primary-hover: #2d328f;
 $link-color: #6168F3;
 $warning-color: #8b0000;
+$main-white: white;
 
 /* 
 likes & home
