--- a/views/restaurants/show.hbs
+++ b/views/restaurants/show.hbs
@@ -17,7 +17,7 @@
     </section>
     <section id="middle">
         <section class="snap">
-            <img src="/public/images/restaurant.jpg" alt="">
+            <img src="{{ restaurant.images.bg.src }}" alt="{{ restaurant.images.bg.alt}}">
             <img src="/public/images/restaurant.jpg" alt="">
             <img src="/public/images/restaurant.jpg" alt="">
             <img src="/public/images/restaurant.jpg" alt="">
