--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,7 +11,7 @@
 @import 'animations';
 
 // Pages
-// @import 'restaurants';
+@import 'restaurants';
 @import 'messages';
 @import 'register';
 @import 'error';
