--- a/resources/sass/_animations.scss
+++ b/resources/sass/_animations.scss
@@ -28,3 +28,16 @@
         transform: translateX(0)
     }
 }
+
+// restaurants
+@keyframes img-save {
+    0% {
+        transform: rotateY(0) scale(1);
+    }
+    60%{
+        transform: rotateY(0) scale(.8);
+    }
+    100% {
+        transform: rotateY(360deg) scale(1);
+    }
+}
