added usericon in nav
added usericon in nav

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -7,7 +7,7 @@
             
             <a href="/messages"><img src="/public/images/icons/chat-icon.svg" alt="Chat icon"></a>
 
-            <a href="/settings"><img src="/public/images/icons/settings-icon.svg" alt="Settings icon"></a>
+            <a href="/account"><img src="/public/images/icons/usericon.svg" alt="account icon"></a>
 
     </section>
 </footer>
