updated header img link
updated header img link

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
 <header>  
     <figure id="blob"></figure>   
-    <img id="dots" src="public/images/dotsbg.svg">
+    <img id="dots" src="/public/images/dotsbg.svg">
 </header>
