--- a/resources/sass/_form.scss
+++ b/resources/sass/_form.scss
@@ -1,3 +1,69 @@
+form{
+    display: flex;
+    flex-direction: column;
+    
+    label{
+        display: flex;
+        flex-direction: column;
+
+        &.toggle{
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+
+            input{
+                opacity: 0;
+                width: 0;
+                height: 0;
+
+                &:checked + .slider {
+                    background-color: $mainteam-color;
+                    border-radius: $radius-pill;
+                }
+
+                &:focus + .slider {
+                    box-shadow: 0 0 1px $mainteam-color;
+                }
+
+                &:checked + .slider:before {
+                    -webkit-transform: translateX(22px);
+                    -ms-transform: translateX(22px);
+                    transform: translateX(22px);
+                }
+            }
+
+            span{
+                position: absolute;
+                cursor: pointer;
+                top: 30px;
+                left: 0;
+                right: 0;
+                height: 34px;
+                background-color: #ccc;
+                -webkit-transition: .4s;
+                transition: .4s;
+                border-radius: $radius-pill;
+                border: 2px solid $black-color;
+                
+                &:before{
+                    position: absolute;
+                    content: "";
+                    height: 26px;
+                    width: 26px;
+                    left: 4px;
+                    bottom: 2px;
+                    background-color: white;
+                    -webkit-transition: .4s;
+                    transition: .4s;
+                    border: 2px solid $black-color;
+                    border-radius: $radius-pill;
+                }
+            }
+        }
+    }
+}
+
 #loginpagina{
     display:flex;
     flex-direction:column;
