--- a/resources/sass/_restaurants.scss
+++ b/resources/sass/_restaurants.scss
@@ -89,7 +89,7 @@ article {
                     li{
                         flex-shrink: 0;
                         padding: 5px 10px;
-                        background-color: $mainteam-color-hover;
+                        background-color: $mainteam-color;
                         border: 1px solid $black-color;
                     }
                 }
@@ -195,13 +195,12 @@ article {
 
         a{
             position: sticky;
-            // bottom: $footer-height + $big-button-height - 15px;
             right: 20px;
             left: 20px;
             text-align: center;
             border-radius: .5em;
             padding: 0.5em 1em;
-            background-color: #FFBD2F;
+            background-color: $mainteam-color;
             color: #111;
             font-weight: bold;
             text-decoration: none;
@@ -219,7 +218,7 @@ article {
                 margin-bottom: 10px;
 
                 button{
-                    background-color: $mainteam-color-hover;
+                    background-color: $mainteam-color;
                     width:max-content;
                     padding: .5em;
                     border: 2px solid transparent;
@@ -244,7 +243,7 @@ article {
 
             button {
                 padding: 1em;
-                background-color: #FFBD2F;
+                background-color: $mainteam-color;
                 color: #111;
                 border: none;
                 border-radius: .5em;
@@ -264,7 +263,7 @@ article {
                     appearance: none;
                     width: 35px;
                     height: 35px;
-                    background: $mainteam-color-hover;
+                    background: $mainteam-color;
                     border: 2px solid black;
                     cursor: pointer;
                     border-radius: $radius-round;
@@ -291,7 +290,6 @@ article {
         display: flex;
         flex-direction: column;
         gap: 10px;
-        // padding-top: 20px;
         padding: 20px;
         border-top: $border-light;
 
