--- a/views/restaurants/reviews/index.hbs
+++ b/views/restaurants/reviews/index.hbs
@@ -17,10 +17,10 @@
     </section>
     <section id="middle">
         <section class="snap">
-            <img src="/public/images/restaurant.jpg" alt="">
-            <img src="/public/images/restaurant.jpg" alt="">
-            <img src="/public/images/restaurant.jpg" alt="">
-            <img src="/public/images/restaurant.jpg" alt="">
+            <img src="{{ restaurant.images.bg.src }}" alt="{{ restaurant.images.bg.alt}}">
+            <img src="{{ restaurant.images.bg.src }}" alt="{{ restaurant.images.bg.alt}}">
+            <img src="{{ restaurant.images.bg.src }}" alt="{{ restaurant.images.bg.alt}}">
+            <img src="{{ restaurant.images.bg.src }}" alt="{{ restaurant.images.bg.alt}}">
         </section>
         <section>
             <div>
