Username op profiel

--- a/views/profile/account.hbs
+++ b/views/profile/account.hbs
@@ -12,7 +12,8 @@
 <section id="accountpagina">
     <article>
         <img>
-        <h2>Hi Jane Doe!</h2>
+        <h2>Hi {{user.name}}!</h2>
+        <p>{{user.region}}</p>
     </article>
 </section>
 {{> nav }}
