--- a/resources/sass/_account.scss
+++ b/resources/sass/_account.scss
@@ -5,22 +5,141 @@
         display: flex;
         flex-direction: column;
         text-align: left;
+        h1{
+            font-size: 1.4em;
+            position: relative;
+            top: 1em;
+            left: 0.5em;
+            letter-spacing: .07em;
+        }
         a{
             text-decoration: none;
             color: black;
         }
         p{
-            margin-left: 1em;
+            margin-left: 1.5em;
             margin-top: -1em;
         }
     }
     img{
         margin-right: 2em;
         z-index: 10;
+        margin-top: 2em;
     }
 }
 #accountpagina{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
+    article:nth-of-type(2){
+        display: flex;
+        flex-direction: column;
+        margin-left: 3em;
+        section{
+            display: flex;
+            flex-direction: row;
+            img{
+                margin-right: .5em;
+            }
+        }
+    }
+    p{
+        color: grey;
+    }
+}
+
+#hover{
+    width: 100%;
+    height: max-content;
+    background-color: $white-color;
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+    #titel{
+        margin-left: 1em;
+        font-size: 2em;
+        position: absolute;
+        left: 0;
+        margin-top: 1em;
+    }
+    .arrow {
+        padding: 1.5em;
+        width: 15em;
+        filter: brightness(0) saturate(100%) invert(15%) sepia(6%) saturate(1418%) hue-rotate(162deg) brightness(98%) contrast(86%);
+        
+        a {
+            text-decoration: none;
+            color: $font-color;
+            font-family: $main-font;
+            font-size: 1.5em;
+            
+            img {
+            padding-right: .5em;
+            }
+        }
+    }
+    form{
+        display:flex;
+        flex-direction:column;
+        align-items: center;
+        text-align:left;
+        margin-top:6em;
+        width:calc(100% - 20%);
+        label{
+            font-size:1.5em;
+            color:#363636;
+            margin-bottom:.5em;
+            font-weight:600;
+            text-align: left;
+            width: 80%;
+        }
+        input{
+            font-size:1.5em;
+            color:#d6dce7;
+            margin-bottom:.5em;
+            background-color:#ebf2ff;
+            border-radius:1em;
+            border:0.2em solid #d6dce7;
+            padding:.9em;
+            font-family: $main-font;
+        }
+        #buttonchange{
+            background-color:black;
+            color:white;
+            margin-bottom: -2em;
+            border:none;
+            padding:.6em;
+            width:calc(100% - 20%);
+            font-size:1.8em;
+            border-radius:.6em;
+            font-family:"poppins",sans-serif;
+        }
+        #buttondel{
+            background-color:$primary-color;
+            color: $alt-color;
+            border:none;
+            padding:.6em;
+            width:calc(100% - 20%);
+            font-size:1.8em;
+            margin-bottom: -2em;
+            border-radius:.6em;
+            font-family:"poppins",sans-serif;
+        }    
+        #buttonlogout{
+            background-color:grey;
+            color: $alt-color;
+            border:none;
+            padding:.6em;
+            width:calc(100% - 20%);
+            font-size:1.8em;
+            border-radius:.6em;
+            font-family:"poppins",sans-serif;
+            margin-bottom: 3em;
+        }    
+    }
 }
