--- a/resources/sass/_account.scss
+++ b/resources/sass/_account.scss
@@ -32,6 +32,13 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    article:nth-of-type(1){
+        display: flex;
+        align-items: center;
+        img{
+            width: 60%;
+        }
+    }
     article:nth-of-type(2){
         display: flex;
         flex-direction: column;
@@ -49,7 +56,16 @@
     }
 }
 
-#hover{
+.open{
+    transform: translatex(0%);
+}
+.closeicon{
+    margin-top: 1em;
+    position: absolute;
+    right: 0;
+    margin-right: 1em;
+}
+.hover{
     transform: translatex(100%);
     width: 100%;
     height: max-content;
