--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,5 +11,6 @@
     <script src="http://localhost:8080/socket.io/socket.io.js"></script>
     <script src="/public/js/chat.js"></script>
     <script src="/public/js/app.js"></script>
+    <script src="/public/js/account.js"></script>
 </body>
 </html>
