--- a/views/profile/account.hbs
+++ b/views/profile/account.hbs
@@ -6,7 +6,7 @@
         <h1>Profile</h1>
         <a href="#"><p>Sign out</p></a>
     </article>
-    <img src="public/images/icons/edit-icon.svg">
+    <button id="editbutton"><img src="public/images/icons/edit-icon.svg"></button>
 </section>
 
 <section id="accountpagina">
@@ -19,15 +19,15 @@
     </article>
     <article>
         <section>
-            <img src="public/images/icons/favorite-icon.svg" class="editbutton">
+            <img src="public/images/icons/favorite-icon.svg">
             <h2>Favorites</h2>
         </section>
     </article>
 </section>
 
-<section class="hover">
+<section id="hover">
     <h2 id="titel">Edit info</h2>
-    <img src="public/images/icons/close-icon.svg" class="closeicon">
+    <button id="#closeicon"><img src="public/images/icons/close-icon.svg"></button>
     <form action="/update" method="post" id="signupform">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required placeholder="John Doe" value="{{user.username}}">
