fixed editform on profilepage
fixed editform on profilepage

--- a/views/profile/account.hbs
+++ b/views/profile/account.hbs
@@ -27,7 +27,7 @@
 
 <section id="hover">
     <h2 id="titel">Edit info</h2>
-    <button id="#closeicon"><img src="public/images/icons/close-icon.svg"></button>
+    <button id="closeicon"><img src="public/images/icons/close-icon.svg"></button>
     <form action="/update" method="post" id="signupform">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required placeholder="John Doe" value="{{user.username}}">
