--- a/resources/sass/_account.scss
+++ b/resources/sass/_account.scss
@@ -72,6 +72,7 @@
     background: none;
     border: none;
     cursor: pointer;
+    display: block;
 }
 
 #hover{
@@ -118,7 +119,7 @@
         text-align:left;
         margin-top:6em;
         width:calc(100% - 20%);
-        label{
+         > label{
             font-size:1.5em;
             color:#363636;
             margin-bottom:.5em;
@@ -131,10 +132,12 @@
             color:#d6dce7;
             margin-bottom:.5em;
             background-color:#ebf2ff;
-            border-radius:1em;
+            border-radius: 0.5em;            
             border:0.2em solid #d6dce7;
             padding:.9em;
             font-family: $main-font;
+            width: 24em;
+            max-width: 100%;
         }
         #buttonchange{
             background-color:black;
@@ -142,9 +145,12 @@
             margin-bottom: -2em;
             border:none;
             padding:.6em;
-            width:calc(100% - 20%);
+            // width:calc(100% - 20%);
+
+            width: 21em;
+            max-width: 100%;
             font-size:1.8em;
-            border-radius:.6em;
+            border-radius: 0.5em;
             font-family:"poppins",sans-serif;
         }
         #buttondel{
@@ -152,22 +158,88 @@
             color: $alt-color;
             border:none;
             padding:.6em;
-            width:calc(100% - 20%);
+            // width:calc(100% - 20%);
+            width: 21em;
+            max-width: 100%;
             font-size:1.8em;
             margin-bottom: -2em;
-            border-radius:.6em;
+            border-radius: 0.5em;
             font-family:"poppins",sans-serif;
         }    
         #buttonlogout{
-            background-color:grey;
+            background-color:#d6dce7;
             color: $alt-color;
             border:none;
             padding:.6em;
-            width:calc(100% - 20%);
+            // width:calc(100% - 20%);
+
+            width: 21em;
+            max-width: 100%;
             font-size:1.8em;
-            border-radius:.6em;
+            border-radius: 0.5em;            
             font-family:"poppins",sans-serif;
             margin-bottom: 3em;
         }    
     }
 }
+
+.preferences {
+    list-style-type: none;
+    margin: auto;
+    padding: 1em calc((100% - 22em) / 2);
+    font-family: "poppins", sans-serif;
+    margin-bottom: 2em;
+  
+  li {
+    float: left;
+    margin: 1em .5em;
+    width: 100px;
+    height: 40px;
+    position: relative;
+    text-align: center;
+    border-radius: .5em;
+    color: #8496cb;
+    font-weight: 500;
+    background-color: #c5d3f7;
+  }
+  
+  label,
+  input {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    font-size: 1.3em;
+    text-align: center;
+  }
+  
+  input[type="checkbox"] {
+    opacity: 0.01;
+    z-index: 100;
+  }
+  
+  input[type="checkbox"]:checked+label,
+  .Checkedcheckbox+label 
+    {
+    background: #2C3338;
+    color: white;
+    transition: .2s ease;
+  
+  }
+  
+  label {
+    padding: 5px;
+    border-radius: .5em;
+    cursor: pointer;
+    z-index: 90;
+  }
+  
+    label:hover {
+    background: #abb8d9;
+    color: white;
+    transition: .2s ease;
+  }
+  }
+
