Login feature werkt!!!

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -17,6 +17,6 @@
             <p>Forgot password?</p>
             <input id="button" type="submit" value="Inloggen">
         </form>
-        <p>Not a member?<a href="/register">register now!</a></p>
+        <p>Not a member?<a href="/register"> Register now!</a></p>
     </section>
 </main>
