--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,12 +23,14 @@ $input-bg-color: #F4F6FC;
 $black-color: black;
 $black-color-light: rgba($black-color, 0.8);
 $validate-color:#63d64c;
+$light-blue: lightblue;
 $errorpage-bg: #2C3338;
 $white: white;
 $btn-primary-hover: #2d328f;
 $link-color: #6168F3;
 $warning-color: #8b0000;
 $main-white: white;
+$red-color: red;
 
 // border
 $border-light: 2px solid rgba($black-color, 0.1);
