--- a/views/profile/account.hbs
+++ b/views/profile/account.hbs
@@ -24,6 +24,35 @@
     </article>
 </section>
 
+<section class="blokkenaccount">
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+
+</section>
+
 <section id="hover">
     <h2 id="titel">Edit info</h2>
     <form action="/account/updateUser" method="post" id="signupform">
