--- a/views/profile/likes.hbs
+++ b/views/profile/likes.hbs
@@ -1,6 +1,6 @@
 <section class="likes">
   <h1>Likes</h1>
-  <ul>
+  {{!-- <ul>
     {{#each likes}}
     <li>
       <a href="/restaurants/{{restaurant.slug}}">
@@ -13,5 +13,34 @@
       </a>
     </li>
     {{/each}}
-  </ul>
+  </ul> --}}
+</section>
+
+<section class="blokken">
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+  <article>
+    <img>
+    <h2>Restaurantnaam</h2>
+  </article>
+
+
 </section>
