--- a/resources/sass/_restaurants.scss
+++ b/resources/sass/_restaurants.scss
@@ -201,7 +201,7 @@ article {
             border-radius: .5em;
             padding: 0.5em 1em;
             background-color: $mainteam-color;
-            color: #111;
+            color: $black-color;
             font-weight: bold;
             text-decoration: none;
         }
@@ -244,7 +244,7 @@ article {
             button {
                 padding: 1em;
                 background-color: $mainteam-color;
-                color: #111;
+                color: $black-color;
                 border: none;
                 border-radius: .5em;
                 text-align: center;
@@ -255,7 +255,7 @@ article {
                 -webkit-appearance: none;
                 width: 100%;
                 height: 5px;
-                background: black;
+                background: $black-color;
                 border-radius: 10px;
 
                 &::-webkit-slider-thumb {
@@ -264,7 +264,7 @@ article {
                     width: 35px;
                     height: 35px;
                     background: $mainteam-color;
-                    border: 2px solid black;
+                    border: 2px solid $black-color;
                     cursor: pointer;
                     border-radius: $radius-round;
                 }
