--- a/views/profile/likes.hbs
+++ b/views/profile/likes.hbs
@@ -3,8 +3,9 @@
 </section>
 
 <section class="blokken">
+  {{!-- Je moet even kijken wat handig is, gwn een vierkante img met daarop de tekst of de article een BG image geven via scss --}}
   <article>
-    <img>
+    <img> 
     <h2>Restaurantnaam</h2>
   </article>
 
