--- a/views/profile/account.hbs
+++ b/views/profile/account.hbs
@@ -26,27 +26,27 @@
 
 <section class="blokkenaccount">
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
