--- a/views/profile/likes.hbs
+++ b/views/profile/likes.hbs
@@ -5,27 +5,27 @@
 <section class="blokken">
   {{!-- Je moet even kijken wat handig is, gwn een vierkante img met daarop de tekst of de article een BG image geven via scss --}}
   <article>
-    <img> 
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 
   <article>
-    <img>
+    <img src="public/images/tijdelijke-afbeelding.jpg"> 
     <h2>Restaurantnaam</h2>
   </article>
 </section>
